--- a/index.html
+++ b/index.html
@@ -219,67 +219,152 @@
             <div class="uk-tile uk-tile-transparent">
               <h1 class="sectionHead glitch final" data-text="Timeline">Timeline</h1>
             </div>
-          </div>  
+          </div>
           <div class="timeline">
             <ul>
               <li>
-                <div>
-                  <time>1934</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
+                </div>
+
+              </li>
+              <li>
+               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
                 </div>
               </li>
               <li>
-                <div>
-                  <time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
+               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
                 </div>
               </li>
               <li>
-                <div>
-                  <time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
+               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
                 </div>
               </li>
               <li>
-                <div>
-                  <time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
                 </div>
               </li>
               <li>
-                <div>
-                  <time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
                 </div>
               </li>
               <li>
-                <div>
-                  <time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
                 </div>
               </li>
               <li>
-                <div>
-                  <time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
                 </div>
               </li>
               <li>
-                <div>
-                  <time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
+               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
                 </div>
               </li>
               <li>
-                <div>
-                  <time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
+               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
                 </div>
               </li>
               <li>
-                <div>
-                  <time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
                 </div>
               </li>
               <li>
-                <div>
-                  <time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-                </div>
-              </li>
-              <li>
-                <div>
-                  <time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+                <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
                 </div>
               </li>
             </ul>
@@ -288,7 +373,7 @@
       </div>
     </div>
     <!--Timeline section ends -->
-    
+
     <!--Team section begins-->
     <div class="uk-position-relative teamh">
       <!-- <div >
