--- a/index.html
+++ b/index.html
@@ -131,11 +131,9 @@
     <!--Event section begins-->
 
     <div class="uk-position-relative" id="event" uk-scrollspy="cls:uk-animation-fade">
-      <div class="uk-section parasllax">
+      <div class="uk-section ">
         <div id="universe">
-          <div id="stars"></div>
-          <div id="stars2"></div>
-          <div id="stars3"></div>
+
 
           <div class="uk-container">
             <div class="uk-position-top-center">
@@ -220,7 +218,7 @@
               <h1 class="sectionHead glitch final" data-text="Timeline">Timeline</h1>
             </div>
           </div>
-          <div class="timeline">
+          <div class="timeline parallax">
             <ul>
               <li>
                 <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
@@ -231,12 +229,14 @@
                     <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
 
                   </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab
+                  atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi
+                  odit nam aut doloribus.
                 </div>
 
               </li>
               <li>
-               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
 
                   <span class="mask bg-gradient-default opacity-7"></span>
 
@@ -244,115 +244,9 @@
                     <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
 
                   </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
-                </div>
-              </li>
-              <li>
-               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-
-                  <span class="mask bg-gradient-default opacity-7"></span>
-
-                  <blockquote class="card-blockquote">
-                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
-
-                  </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
-                </div>
-              </li>
-              <li>
-               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-
-                  <span class="mask bg-gradient-default opacity-7"></span>
-
-                  <blockquote class="card-blockquote">
-                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
-
-                  </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
-                </div>
-              </li>
-              <li>
-               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-
-                  <span class="mask bg-gradient-default opacity-7"></span>
-
-                  <blockquote class="card-blockquote">
-                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
-
-                  </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
-                </div>
-              </li>
-              <li>
-               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-
-                  <span class="mask bg-gradient-default opacity-7"></span>
-
-                  <blockquote class="card-blockquote">
-                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
-
-                  </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
-                </div>
-              </li>
-              <li>
-               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-
-                  <span class="mask bg-gradient-default opacity-7"></span>
-
-                  <blockquote class="card-blockquote">
-                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
-
-                  </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
-                </div>
-              </li>
-              <li>
-               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-
-                  <span class="mask bg-gradient-default opacity-7"></span>
-
-                  <blockquote class="card-blockquote">
-                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
-
-                  </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
-                </div>
-              </li>
-              <li>
-               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-
-                  <span class="mask bg-gradient-default opacity-7"></span>
-
-                  <blockquote class="card-blockquote">
-                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
-
-                  </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
-                </div>
-              </li>
-              <li>
-               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-
-                  <span class="mask bg-gradient-default opacity-7"></span>
-
-                  <blockquote class="card-blockquote">
-                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
-
-                  </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
-                </div>
-              </li>
-              <li>
-               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-
-                  <span class="mask bg-gradient-default opacity-7"></span>
-
-                  <blockquote class="card-blockquote">
-                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
-
-                  </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab
+                  atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi
+                  odit nam aut doloribus.
                 </div>
               </li>
               <li>
@@ -364,7 +258,23 @@
                     <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
 
                   </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi odit nam aut doloribus.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab
+                  atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi
+                  odit nam aut doloribus.
+                </div>
+              </li>
+              <li>
+                <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+
+                  <span class="mask bg-gradient-default opacity-7"></span>
+
+                  <blockquote class="card-blockquote">
+                    <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
+
+                  </blockquote>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab
+                  atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi
+                  odit nam aut doloribus.
                 </div>
               </li>
             </ul>
