--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
 
                   </blockquote>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab
-                  atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi
-                  odit nam aut doloribus.
+
                 </div>
 
               </li>
@@ -245,7 +244,6 @@
 
                   </blockquote>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab
-                  atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi
                   odit nam aut doloribus.
                 </div>
               </li>
@@ -259,7 +257,6 @@
 
                   </blockquote>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab
-                  atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi
                   odit nam aut doloribus.
                 </div>
               </li>
@@ -272,8 +269,7 @@
                     <h2 class="font-weight-bold text-white border-bottom">event -1</h2>
 
                   </blockquote>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur facere inventore ab
-                  atque magnam nobis nisi soluta voluptatum dolorem praesentium expedita architecto voluptate, excepturi
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis pariatur voluptate, excepturi
                   odit nam aut doloribus.
                 </div>
               </li>
