--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="uk-position-center">
       <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
       <lottie-player src="src/lf30_editor_2vwxpmet.json" background="transparent" speed="1"
-        style="width: 300px; height: 300px" loop autoplay></lottie-player>
+        style="width: 100%; height: 300px" loop autoplay></lottie-player>
     </div>
   </div>
 
