Fixed loader and changed fonts

--- a/index.html
+++ b/index.html
@@ -128,6 +128,68 @@
 
     <!--About section ends-->
 
+    <!--FAQ's section begins-->
+
+    <div class="uk-position-relative" id="faqs" uk-scrollspy="cls:uk-animation-fade">
+      <div class="uk-section">
+        <div class="uk-container">
+          <div class="uk-position-top-center">
+            <div class="uk-tile uk-tile-default">
+              <h1 class="sectionHead glitch final" data-text="FAQ's">FAQ's</h1>
+            </div>
+          </div>
+          <div class="uk-position-center">
+            <ul uk-accordion>
+              <li>
+                  <a class="uk-accordion-title" href="#">Item 1</a>
+                  <div class="uk-accordion-content">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </div>
+                  <hr class="uk-divider-icon">
+              </li>
+              <li>
+                  <a class="uk-accordion-title" href="#">Item 2</a>
+                  <div class="uk-accordion-content">
+                      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor reprehenderit.</p>
+                  </div>
+                  <hr class="uk-divider-icon">
+              </li>
+              <li>
+                  <a class="uk-accordion-title" href="#">Item 3</a>
+                  <div class="uk-accordion-content">
+                      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</p>
+                  </div>
+                  <hr class="uk-divider-icon">
+              </li>
+              <li>
+                <a class="uk-accordion-title" href="#">Item 1</a>
+                <div class="uk-accordion-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <hr class="uk-divider-icon">
+            </li>
+            <li>
+                <a class="uk-accordion-title" href="#">Item 2</a>
+                <div class="uk-accordion-content">
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor reprehenderit.</p>
+                </div>
+                <hr class="uk-divider-icon">
+            </li>
+            <li>
+                <a class="uk-accordion-title" href="#">Item 3</a>
+                <div class="uk-accordion-content">
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</p>
+                </div>
+                <hr class="uk-divider-icon">
+            </li>
+          </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--FAQ's section ends-->
+
     <!--Event section begins-->
 
     <div class="uk-position-relative" id="event" uk-scrollspy="cls:uk-animation-fade">
@@ -583,10 +645,6 @@
     <!--Sponsor section begins-->
 
     <!--Sponsor section ends-->
-
-    <!--Contact section begins-->
-
-    <!--Contact section ends-->
 
     <!--footer-->
     <footer class="uk-position-relative footer-distributed" uk-scrollspy="cls:uk-animation-fade" id="contact">
