Sponsor Data Amended and Images are now clickable to their respective websites

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
         <!--Sponsor section begins-->
 
-        <div class="uk-position-relative" id="sponsor">
+        <div class="uk-position-relative" id="sponsors">
           <div class="uk-position-top-center">
             <div class="uk-tile uk-tile-transparent">
               <h1 class="sectionHead glitch final" data-text="Sponsors">
