--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
   />
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
 
   <body>
     <!--Pre Loader-->
