Made Social Links clickable and linked to their respective sites

--- a/index.html
+++ b/index.html
@@ -460,19 +460,19 @@
 
             <div class="footer-icons">
               <div class="container">
-                <div class="btn fb-btn">
+                <div class="btn fb-btn" onclick='window.open("https://www.facebook.com/ieeesbjiit/", "noopener noreferrer")'>
                   <i class="fa fa-facebook" aria-hidden="true" id="fb"></i>
                 </div>
-                <div class="btn ig-btn">
+                <div class="btn ig-btn" onclick="window.open('https://www.instagram.com/ieeesbjiit/', 'noopener noreferrer')">
                   <i class="fa fa-instagram" aria-hidden="true" id="ig"></i>
                 </div>
-                <div class="btn ln-btn">
+                <div class="btn ln-btn" onclick="window.open('https://www.linkedin.com/company/ieee-student-branch-jiit/', 'noopener noreferrer')">
                   <i class="fa fa-linkedin" aria-hidden="true" id="ln"></i>
                 </div>
-                <div class="btn gt-btn">
+                <div class="btn gt-btn" onclick="window.open('https://github.com/ieeesbjiit', 'noopener noreferrer')">
                   <i class="fa fa-github" aria-hidden="true" id="gt"></i>
                 </div>
-                <div class="btn yt-btn">
+                <div class="btn yt-btn" onclick="window.open('https://www.youtube.com/c/IEEESBJIIT', 'noopener noreferrer')">
                   <i class="fa fa-youtube-play" aria-hidden="true" id="yt"></i>
                 </div>
               </div>
@@ -482,17 +482,17 @@
             <p class="footer-links" style="text-align: center">
               <a href="#" class="link-1">Home</a>
 
-              <a href="#">About</a>
+              <a href="#about">About</a>
 
-              <a href="#">Events</a>
+              <a href="#event">Events</a>
 
-              <a href="#">Timeline</a>
+              <a href="#timeline">Timeline</a>
 
-              <a href="#">Team</a>
+              <a href="#team">Team</a>
 
-              <a href="#">Sponser</a>
+              <a href="#sponsors">Sponsors</a>
 
-              <a href="#">Contact</a>
+              <a href="#contact">Contact</a>
             </p>
           </div>
         </footer>
