--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         <!--Timeline section ends -->
 
         <!--Team section begins-->
-        <div class="uk-position-relative teamh" id="team">
+        <div class="uk-position-relative teamh" id="team" uk-scrollspy="cls:uk-animation-fade">
           <!-- <div >
         <div class="uk-container">
        
@@ -387,7 +387,7 @@
 
         <!--Sponsor section begins-->
 
-        <div class="uk-position-relative" id="sponsors">
+        <div class="uk-position-relative" id="sponsors" uk-scrollspy="cls:uk-animation-fade">
           <div class="uk-position-top-center">
             <div class="uk-tile uk-tile-transparent">
               <h1 class="sectionHead glitch final" data-text="Sponsors">
