--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <!--Timeline section begins-->
 
       <div class="uk-position-relative" id="timeline" uk-scrollspy="cls:uk-animation-fade">
-        <div class="uk-section">
+        <div class="uk-section temp">
           <div class="uk-container time">
             <div class="uk-position-top-center">
               <div class="uk-tile uk-tile-transparent">
@@ -308,24 +308,297 @@
       <!--Timeline section ends -->
 
       <!--Team section begins-->
-      <div class="uk-position-relative teamh" id="team" uk-scrollspy="cls:uk-animation-fade">
+      <div class="uk-position-relative teamh">
         <!-- <div >
-        <div class="uk-container">
-       
-          </div>
-          <div>
+          <div class="uk-container">
+         
+            </div>
             <div>
-
-              <div > -->
+              <div>
+                <div > -->
         <div class="uk-position-top-center">
           <div class="uk-tile uk-tile-transparent">
             <h1 class="sectionHead glitch final" data-text="Team">Team</h1>
           </div>
         </div>
-        <main id="teamContainer">
-          <!-- Content injected via DOM -->
+        <main>
+
+          <div class="col-md-4">
+            <div class="dcard">
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+
+              <div class="image-card card" style="background-image: url('src/post/shwetank.jpg')">
+                <div class="caption"></div>
+                <div class="content">
+                  <br><br><br>
+                  <h2>Shwetank</h2><br>
+                  <h3>Chairperson</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="dcard">
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+
+              <div class="image-card card" style="background-image: url('src/post/priyanjali.jpg')">
+                <div class="caption"></div>
+                <div class="content">
+                  <br><br><br>
+                  <h2>Priyanjali</h2><br>
+                  <h3>Vice Chairperson</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="dcard">
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+
+              <div class="image-card card" style="background-image: url('src/post/ishaan.jpg')">
+                <div class="caption"></div>
+                <div class="content">
+                  <br><br><br>
+                  <h2>Ishaan</h2><br>
+                  <h3>Organising Secretary</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="dcard">
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+
+
+              <div class="image-card card" style="background-image: url('src/post/ayush.jpg')">
+                <div class="caption"></div>
+                <div class="content">
+                  <br><br><br>
+                  <h2>Ayush</h2><br>
+                  <h3>Treasurer</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="dcard">
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+
+              <div class="image-card card" style="background-image: url('src/post/suraj.jpg')">
+                <div class="caption"></div>
+                <div class="content">
+                  <br><br><br>
+                  <h2>Suraj</h2><br>
+                  <h3>Technical Head Cse</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="dcard">
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+
+              <div class="image-card card" style="background-image: url('src/post/tanya.jpg')">
+                <div class="caption"></div>
+                <div class="content">
+                  <br><br><br>
+                  <h2>Tanya</h2><br>
+                  <h3>Technical Head Ece</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="dcard">
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+
+              <div class="image-card card" style="background-image: url('src/post/kartikey.jpg')">
+                <div class="caption"></div>
+                <div class="content">
+                  <br><br><br>
+                  <h2>Kartikey</h2><br>
+                  <h3>Public Relations Head</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="dcard">
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+
+              <div class="image-card card" style="background-image: url('src/post/somya.jpg')">
+                <div class="caption"></div>
+                <div class="content">
+                  <br><br><br>
+                  <h2>Somya</h2><br>
+                  <h3>Marketing Head</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="dcard">
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+
+              <div class="image-card card" style="background-image: url('src/post/akshat.jpg')">
+                <div class="caption"></div>
+                <div class="content">
+                  <br><br><br>
+                  <h2>Akshat</h2><br>
+                  <h3>Management Head</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="dcard">
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+
+              <div class="image-card card" style="background-image: url('src/post/manan.jpeg')">
+                <div class="caption"></div>
+                <div class="content">
+                  <br><br><br>
+                  <h2>Manan</h2><br>
+                  <h3>Creative Head</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="dcard">
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+
+              <div class="image-card card" style="background-image: url('src/post/aditya.jpg')">
+                <div class="caption"></div>
+                <div class="content">
+                  <br><br><br>
+                  <h2>Aditya</h2><br>
+                  <h3>Digital Head</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="dcard">
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+              <div class="trigger"></div>
+
+              <div class="image-card card" style="background-image: url('src/post/radhika.jpeg')">
+                <div class="caption"></div>
+                <div class="content">
+                  <br><br><br>
+                  <h2>Radhika</h2><br>
+                  <h3>WIE Management Head</h3>
+                </div>
+              </div>
+            </div>
+          </div>
         </main>
-        <br /><br /><br /><br /><br />
+        <!-- </div>
+                <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+                  uk-slider-item="previous"></a>
+                <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+                  uk-slider-item="next"></a>
+              </div>
+              <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+            </div>
+          </div>
+        </div> -->
       </div>
       <!--Team section ends-->
 
@@ -340,7 +613,7 @@
           </div>
         </div>
         <br /><br />
-        <main id="sponsorContainer">
+        <main id="sponsorContainer" style="padding-bottom:200px ;">
           <!-- Content injected via DOM -->
         </main>
       </div>
