--- a/test.html
+++ b/test.html
@@ -50,22 +50,14 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front glowing"></div>
-          <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Architect & Engineer</p>
-            <p>We love that guy</p>
-          </div>
+          <div class="flip-card-back"></div>
         </div>
       </div>
     </div>
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front glowing"></div>
-        <div class="flip-card-back">
-          <h1>John Doe</h1>
-          <p>Architect & Engineer</p>
-          <p>We love that guy</p>
-        </div>
+        <div class="flip-card-back"></div>
       </div>
     </div>
   </body>
