--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!-- Favicon -->
 <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
 
-<body>
+<body class="parallax">
   <!--Pre Loader-->
   <div id="preLoader">
     <div class="uk-position-center">
@@ -99,8 +99,8 @@
       <div class="uk-section">
         <div class="uk-container">
           <div class="uk-position-top-center">
-            <div class="uk-tile uk-tile-default">
-              <h1 class="sectionHead glitch final" data-text="About">
+            <div class="uk-tile ">
+              <h1 class="sectionHead glitch" data-text="About">
                 About
               </h1>
             </div>
@@ -142,7 +142,7 @@
             <div class="uk-container">
               <div class="uk-position-top-center">
                 <div class="uk-tile uk-tile-default" style="background-color: transparent">
-                  <h1 class="sectionHead glitch final" data-text="Events">
+                  <h1 class="sectionHead glitch" data-text="Events">
                     Events
                   </h1>
                 </div>
@@ -238,12 +238,12 @@
           <div class="uk-container time">
             <div class="uk-position-top-center">
               <div class="uk-tile uk-tile-transparent">
-                <h1 class="sectionHead glitch final" data-text="Timeline">
+                <h1 class="sectionHead glitch " data-text="Timeline">
                   Timeline
                 </h1>
               </div>
             </div>
-            <div class="timeline parallax">
+            <div class="timeline ">
               <ul>
                 <li>
                   <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
@@ -308,7 +308,7 @@
       <!--Timeline section ends -->
 
       <!--Team section begins-->
-      <div class="uk-position-relative teamh">
+      <div class="uk-position-relative teamh" uk-scrollspy="cls:uk-animation-fade">
         <!-- <div >
           <div class="uk-container">
          
@@ -321,7 +321,7 @@
             <h1 class="sectionHead glitch final" data-text="Team">Team</h1>
           </div>
         </div>
-        <main>
+        <main style="margin-bottom:77px ;">
 
           <div class="col-md-4">
             <div class="dcard">
@@ -607,13 +607,13 @@
       <div class="uk-position-relative" id="sponsors" uk-scrollspy="cls:uk-animation-fade">
         <div class="uk-position-top-center">
           <div class="uk-tile uk-tile-transparent">
-            <h1 class="sectionHead glitch final" data-text="Sponsors">
+            <h1 class="sectionHead glitch  spons" data-text="Sponsors">
               Sponsors
             </h1>
           </div>
         </div>
         <br /><br />
-        <main id="sponsorContainer" style="padding-bottom:200px ;">
+        <main id="sponsorContainer">
           <!-- Content injected via DOM -->
         </main>
       </div>
